--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,18 @@
   "require": {
     "phpmailer/phpmailer": "^7.0",
     "stripe/stripe-php": "^13.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^12.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
   }
 }
