--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "phpmailer/phpmailer": "^7.0",
-    "stripe/stripe-php": "^13.0"
+    "stripe/stripe-php": "^13.0",
+    "dompdf/dompdf": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^12.4"
